project(httpload C CXX )
cmake_minimum_required(VERSION 3.16)
set(CMAKE_THREAD_PREFER_PTHREAD ON)                                                                                                                                                                                                           
set(THREADS_PREFER_PTHREAD_FLAG ON)                                                                                                                                                                                                           
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -pthread")
add_executable(httpload httpload.c)
find_package(Threads REQUIRED)                                                                                                                                                                                                                
if(TARGET Threads::Threads)                                                                                                                                                                                                                   
  target_link_libraries(httpload PRIVATE Threads::Threads)                                                                                                                                                                                        
endif()
